# syncplayserver

./: Cargo.toml  Dockerfile  syncplayserver.service
.github/workflows/: rust.yml
src/: data.rs  main.rs  schema.rs
