[package]
name = "syncplayserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-graphql = "5.0.5"

anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
fn-error-context = "0.2"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5.4.0"
rand = "0.8.5"
axum = { version = "0.6.11", features = ["ws", "headers"] }
async-graphql-axum = "5.0.6"
tower-http = { version = "0.4.0", features = ["cors"] }

[profile.release]
lto = true
